# AgenticVM

./: .env.example  .gitignore  PHASE_2_SUMMARY.md  SYSTEM_OVERVIEW.md  alembic.ini  docker-compose.yml  images-and-clip.md  plan.md  progress.md  pyproject.toml
backend/: __init__.py  config.py
backend/agents/: __init__.py  _prompt.py
backend/agents/council/: __init__.py  commercial.md  commercial.py  contracts.py  creative.md  creative.py  guardian.md  guardian.py  psychology.md  psychology.py
backend/agents/mockup/: __init__.py  mockup.md  mockup.py
backend/agents/orchestrator/: __init__.py  orchestrator.md  orchestrator.py
backend/agents/perception/: __init__.py  perception.md  perception.py  scene_graph.py
backend/agents/scoring/: __init__.py  scorer.md  scorer.py
backend/api/: deps.py  main.py  routes_auth.py  routes_brands.py  routes_displays.py  schemas.py  security.py
backend/brand/: __init__.py  ingestion.py  product_matcher.py  profile.py  rag.py  understanding.py
backend/db/: __init__.py  base.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: .gitkeep  20260714_2223_2f2073f4a471_init_users.py  (+4 more)
backend/model_router/: __init__.py  azure_embedding_provider.py  base.py  claude_provider.py  clip_provider.py  gemini_image_provider.py  router.py
backend/scripts/: __init__.py  build_mock_display.py  http_smoke.py  live_smoke.py  run_api.py  seed_demo_brand.py
backend/tests/: conftest.py  test_brand_routes.py  test_brand_unit.py  test_displays.py  test_health.py  test_perception.py  test_perception_worker.py
backend/workers/: __init__.py  app.py  tasks.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
