[project]
name = "avms-backend"
version = "0.1.0"
description = "Agentic Visual Merchandising Studio — backend"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",

    # Config
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",

    # DB
    "sqlalchemy>=2.0.36",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",

    # Auth
    "bcrypt>=4.2",
    "pyjwt>=2.9",

    # LLMs
    "anthropic>=0.39",
    "claude-agent-sdk>=0.1.0",
    "openai>=1.55",
    "google-generativeai>=0.8",

    # Embeddings / CV (base — heavy CLIP stack lives in the optional [ml] extra)
    "pillow>=11.0",
    "numpy>=1.26",

    # HTTP
    "httpx>=0.27",

    # Jobs
    "procrastinate>=2.14",

    # Utils
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# CLIP image embeddings — heavy download (torch). Install when Phase 1 CLIP
# matcher is wired up:  pip install -e ".[ml]"
ml = [
    "open-clip-torch>=2.29",
    "torch>=2.5",
    "torchvision>=0.20",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-q"
